2005-08-22 Borut Razem <borut.razem AT siol.net>

	* local/sparc-solaris1.mk: use /usr/ccs/bin/strip instead the default
	  GNU /usr/local/bin/strip, which has problems

2005-08-18 Borut Razem <borut.razem AT siol.net>

	* local/x86-linux2.mk, local/x86-linux2-i586-mingw32msvc.mk: added

2005-08-16 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-extra.mk, lib/fetch.mk:
	  use bash instead sh: scripts are bash specific
	* sparc-solaris1.mk: added local/sparc-solaris1.mk

2005-08-15 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk: extract the host name without domain to $(HOSTNAME)

2005-08-08 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: report the target OS

2005-05-07  Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/release.mk: updated for 2.5.0 release

2004-10-28 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: --include='*.exe' to rsync sdcc_yyyymmdd_setup.exe

2004-10-17 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk, lib/variables.mk: cross compiling of WIN32 setup.exe
	on Linux as a part of nightly build

2004-10-09  Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/bootstrap.mk: updated BOOTSTRAPFILTEREDLISTADMIN to point
	to my address instead of Bernhard's

2004-08-30  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc.mk (sdcc-regression): added hc08 to the regression
	tests

2004-02-22  Bernhard Held <bernhard AT bernhardheld.de>

	* sdcc-build/lib/variables.mk: fixed developername

2004-02-20  Bernhard Held <bernhard AT bernhardheld.de>

	* lib/src-archive.mk: finally removed $HOSTNAME from archive name

2004-02-19  Bernhard Held <bernhard AT bernhardheld.de>

	* lib/bootstrap.mk (generate-tarball): fixed `find` argument to
	`recode` both *.txt and *.TXT files

2004-02-11  Bernhard Held <bernhard AT bernhardheld.de>

	* sdcc-build-bootstrap.sh: added $EXTRATARGET to the list of
	make targets; it will be used for target archive-src-trees
